--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0
+  flutter_sticky_header: "^0.3.4"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,6 +44,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
   - assets/icons/
+  - assets/images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
