--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.0
   flutter_sticky_header: "^0.3.4"
+  shared_preferences: ^0.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
