--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0
-  flutter_sticky_header: "^0.3.4"
+  flutter_sticky_header: ^0.3.4
   shared_preferences: ^0.5.0
 
   # The following adds the Cupertino Icons font to your application.
