--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,9 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0
-  flutter_sticky_header: "^0.3.4"
+  flutter_sticky_header: ^0.3.4
   shared_preferences: ^0.5.0
+  google_maps_flutter: ^0.5.13
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
