--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_sticky_header: ^0.3.4
   shared_preferences: ^0.5.0
   google_maps_flutter: ^0.5.13
+  scroll_to_index: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
