--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   shared_preferences: ^0.5.0
   google_maps_flutter: ^0.5.13
   scroll_to_index: any
+  flutter_speed_dial: ^1.1.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
