--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   google_maps_flutter: ^0.5.15
   scroll_to_index: any
   flutter_speed_dial: ^1.1.2
+  intl: ^0.15.8
 
 
   # The following adds the Cupertino Icons font to your application.
