--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   scroll_to_index: any
   flutter_speed_dial: ^1.1.2
   intl: ^0.15.8
+  share: ^0.6.1+1
 
 
   # The following adds the Cupertino Icons font to your application.
