--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_speed_dial: ^1.1.2
   intl: ^0.15.8
   share: ^0.6.1+1
+  connectivity: ^0.4.3+2
 
 
   # The following adds the Cupertino Icons font to your application.
