--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   intl: ^0.15.8
   share: ^0.6.1+1
   connectivity: ^0.4.3+2
+  url_launcher: ^5.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
