--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,8 +42,8 @@ android {
         applicationId "com.github.manuito83.cavokator"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 8
-        versionName "2.0"
+        versionCode 9
+        versionName "2.1-alpha"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
