--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,7 +43,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 10
-        versionName "2.1-alpha"
+        versionName "2.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
