--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   flutter_speed_dial: ^1.2.1
   intl: ^0.16.0
   share: ^0.6.2+1
-  connectivity: ^0.4.4
+  connectivity: ^0.4.6+1
   url_launcher: ^5.1.3
 
 
