--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,16 +15,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0+2
-  flutter_sticky_header: ^0.4.0
-  shared_preferences: ^0.5.3+4
-  google_maps_flutter: ^0.5.21+2
-  scroll_to_index: ^1.0.2
-  flutter_speed_dial: ^1.2.1
-  intl: ^0.16.0
-  share: ^0.6.2+1
-  connectivity: ^0.4.6+1
-  url_launcher: ^5.1.3
+  http:
+  flutter_sticky_header:
+  shared_preferences:
+  google_maps_flutter:
+  scroll_to_index:
+  flutter_speed_dial:
+  intl:
+  share:
+  connectivity:
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
