Finish communication structure between favourites and weather. Also fixed issue with NOTAM not loading correctly (previous bug!).

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   connectivity:
   url_launcher:
   path_provider:
+  back_button_interceptor:
 
 
   # The following adds the Cupertino Icons font to your application.
