--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,7 +31,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     lintOptions {
         disable 'InvalidPackage'
@@ -41,9 +41,9 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.github.manuito83.cavokator"
         minSdkVersion 16
-        targetSdkVersion 28
-        versionCode 22
-        versionName "2.3"
+        targetSdkVersion 29
+        versionCode 23
+        versionName "3.0 beta"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
