--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,8 +42,8 @@ android {
         applicationId "com.github.manuito83.cavokator"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 23
-        versionName "3.0 beta"
+        versionCode 24
+        versionName "3.0 beta-2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
