--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,8 +42,8 @@ android {
         applicationId "com.github.manuito83.cavokator"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 26
-        versionName "3.0 beta-2"
+        versionCode 27
+        versionName "3.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
