--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,21 +16,21 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.2
-  flutter_sticky_header: ^0.5.0
-  shared_preferences: ^0.5.12+4
-  google_maps_flutter: ^1.2.0
-  scroll_to_index: ^1.0.6
-  flutter_speed_dial: ^1.2.5
-  intl: ^0.16.1
-  share: ^0.6.5+4
-  connectivity: ^2.0.2
-  url_launcher: ^5.7.10
-  path_provider: ^1.6.27
+  flutter_sticky_header: ^0.6.0
+  shared_preferences: ^2.0.6
+  google_maps_flutter: ^2.0.6
+  scroll_to_index: ^2.0.0
+  flutter_speed_dial: ^3.0.5
+  intl: ^0.17.0
+  share: ^2.0.4
+  connectivity: ^3.0.6
+  url_launcher: ^6.0.9
+  path_provider: ^2.0.2
   xml: ^5.1.2
-  csv: ^4.1.0
-  back_button_interceptor: ^4.4.1
-  flutter_slidable: ^0.5.7
-  rate_my_app: ^0.7.2
+  csv: ^5.0.0
+  back_button_interceptor: ^5.0.1
+  flutter_slidable: ^0.6.0
+  rate_my_app: ^1.1.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
