--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,12 @@ description: Cavokator - Weather for pilots
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.2
+  http: ^1.1.0
   flutter_sticky_header: ^0.6.0
   shared_preferences: ^2.0.6
   google_maps_flutter: ^2.0.6
@@ -32,22 +32,19 @@ dependencies:
   flutter_slidable: ^0.6.0
   rate_my_app: ^1.1.0+1
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -58,10 +55,9 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-  - assets/icons/
-  - assets/images/
-  - assets/airports/
-
+    - assets/icons/
+    - assets/images/
+    - assets/airports/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
