--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ build/
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 .flutter-plugins-dependencies
+ios/Flutter/Flutter.podspec
+.flutter-plugins-dependencies
