--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   flutter_speed_dial: ^3.0.5
   intl: ^0.17.0
   share: ^2.0.4
-  connectivity: ^3.0.6
+  connectivity_plus: 2.3.7
   url_launcher: ^6.0.9
   path_provider: ^2.0.2
   xml: ^5.1.2
