--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.github.manuito83.cavokator">
 
     <!-- The INTERNET permission is required for development. Specifically,
@@ -13,10 +14,12 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
+        android:name="${applicationName}"
         android:label="Cavokator"
         android:icon="@mipmap/ic_appicon">
-        <meta-data android:name="com.google.android.geo.API_KEY"
-                   android:value="###KEY RESETED###"/>
+        
+        <!--<meta-data android:name="com.google.android.geo.API_KEY"
+                   android:value="###KEY RESETED###"/>-->
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
