--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,22 +15,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.1.0
-  flutter_sticky_header: ^0.6.0
-  shared_preferences: ^2.0.6
-  google_maps_flutter: ^2.0.6
-  scroll_to_index: ^2.0.0
-  flutter_speed_dial: ^3.0.5
-  intl: ^0.17.0
-  share: ^2.0.4
-  connectivity: ^3.0.6
-  url_launcher: ^6.0.9
-  path_provider: ^2.0.2
-  xml: ^5.1.2
-  csv: ^5.0.0
-  back_button_interceptor: ^5.0.1
-  flutter_slidable: ^0.6.0
-  rate_my_app: ^1.1.0+1
+  http: 1.2.1
+  flutter_sticky_header: 0.6.5
+  shared_preferences: 2.2.3
+  ##google_maps_flutter: 2.0.6
+  scroll_to_index: 3.0.1
+  flutter_speed_dial: 7.0.0
+  intl: 0.19.0
+  share_plus: 9.0.0
+  connectivity_plus: 6.0.3
+  url_launcher: 6.3.0
+  path_provider: 2.1.3
+  xml: 6.5.0
+  csv: 6.0.0
+  back_button_interceptor: 7.0.3
+  flutter_slidable: 3.1.0
+  rate_my_app: 2.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
